fixed standings for season 2, changed the way it picks colors because Altanta's primary is too close to the background color

--- a/src/styles/standings.css
+++ b/src/styles/standings.css
@@ -27,7 +27,7 @@ td.standingsColumnName {
 }
 
 td.standingsColumnName>div {
-	padding: 3px 10px 3px 3px;
+	padding: 1px 10px 1px 1px;
 }
 
 td.standingsColumnName>div>div {
